welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:3: error: value ù is not a member of Int
	return ((a % 10 == b % 10) || (a % 10 == c % 10) || (b ù 10 == c % 10));
                                                               ^